@@ -19,3 +19,5 @@ Contributors:
   Rui Barreiros, ftdidmx plugin
   Sean Sill, various fixes.
   Tobi Schäfer, for the MacPort files
+  Hakan Lindestaf, Renard plugin
+
