@@ -101,14 +101,27 @@ string RenardPlugin::Description() const {
 "Renard Plugin\n"
 "----------------------------\n"
 "\n"
-"This plugin creates devices with one output port. It currently only supports "
-"the SS24 dimmer pack.\n"
+"This plugin creates devices with one output port. It supports multiple "
+"Renard SS boards daisy-chained.\n"
 "\n"
 "--- Config file : ola-renard.conf ---\n"
 "\n"
 "device = /dev/ttyUSB0\n"
 "The device to use as a path for the serial port. Multiple devices are "
 "supported.\n"
+"\n"
+"--- Per Device Settings (using above device name without /dev/) ---\n"
+"<device>-baudrate = <int>\n"
+"The speed of the serial port, options are 9600, 19200, 38400, 57600, "
+"115200. Default is 57600.\n"
+"\n"
+"<device>-channels = <int>\n"
+"The number of channels connected to this device. Default 64.\n"
+"\n"
+"<device>-dmx-offset = <int>\n"
+"Which starting point in the DMX universe this device is mapped to. "
+"The default is 0, which means the first channel on Renard address "
+"128 (0x80) will be mapped to DMX channel 1.\n"
 "\n";
 }
 
